@@ -1,3 +1,15 @@
+2018-08-17  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Replace canBubble and cancelable booleans in Event by enum classes
+        https://bugs.webkit.org/show_bug.cgi?id=188692
+        <rdar://problem/43411944>
+
+        Rubber-stamped by Alex Christensen.
+
+        Make these enum classes uint8_t.
+
+        * dom/Event.h:
+
 2018-08-16  Ryosuke Niwa  <rniwa@webkit.org>
 
         Replace canBubble and cancelable booleans in Event by enum classes
